# demo-up

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml  azuredeploy.json
ci/: linux.yml  mac.yml  windows.yml
src/: fetch.rs  main.rs  up.rs
src/cli/: args.rs  fetch.rs  mod.rs  pkg.rs  up.rs
src/config/: arm_template.rs  cli_command.rs  command.rs  config_struct.rs  file_download.rs  mod.rs  session.rs  tour_config.rs
src/demo_config/: mod.rs
src/pkg/: azuredeploy.json  default_variables.json  environment.rs  mod.rs  parameter_option.rs  pkg_command.rs
src/tasks/: az_cli.rs  download.rs  git.rs  mod.rs
test/artifacts/: demo_template.json  environment.json  full_session_config.yml  parameters.json  single_session_config.yml
