[package]
name = "demo"
version = "0.0.1"
authors = ["Steven Murawski"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
clap = "2.33"
git2 = "0.8"
reqwest = "0.9"
os_pipe = "0.8"
duct = "0.12"
regex = "1"
custom_error = "1.6"
uuid = { version = "0.7", features = ["serde", "v4"] }
handlebars = "1.1" 